--- a/calculator.html
+++ b/calculator.html
@@ -4,64 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <style>
-        body {
-            background-image: linear-gradient(to bottom left, wheat, lightblue, white);
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color:darkcyan;
-        }
-        .calculator {
-            background: #222;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
-        .display {
-            width: 100%;
-            height: 50px;
-            font-size: 1.5em;
-            text-align: right;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            background: #333;
-            color: white;
-            border-radius: 5px;
-        }
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-        }
-        button {
-            width: 60px;
-            height: 60px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            background: #444;
-            color: white;
-            transition: 0.3s;
-        }
-        button:hover {
-            background: #666;
-        }
-        .equal {
-            background: #ff9500;
-        }
-        .equal:hover {
-            background: #e08900;
-        }
-    </style>
+    <link rel="stylesheet" href="Stil.css">
 </head>
 <body>
+
+    <form>
+        <input id="backButton" type="button" value="↩" onclick="history.back()">
+       </form>
+
     <div class="calculator">
+        <h1>Calculator</h1>
         <input type="text" class="display" id="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
@@ -75,12 +27,15 @@
             <button onclick="appendValue('4')">4</button>
             <button onclick="appendValue('5')">5</button>
             <button onclick="appendValue('6')">6</button>
-            <button class="equal" onclick="calculateResult()">=</button>
+            <button onclick="appendValue('.')">.</button>
             <button onclick="appendValue('1')">1</button>
             <button onclick="appendValue('2')">2</button>
             <button onclick="appendValue('3')">3</button>
+            <button class="equal" onclick="calculateResult()">=</button>
+            <br>
             <button onclick="appendValue('0')">0</button>
-            <button onclick="appendValue('.')">.</button>
+            <br>
+            
         </div>
     </div>
     <script>
