--- a/calculator.html
+++ b/calculator.html
@@ -53,5 +53,12 @@
             }
         }
     </script>
+
+<div class="information">
+    <div class="information-items">
+        <h3>Calculator</h3>
+      <p>React, Html/CSS, JavaScript</p>
+  </div>
+
 </body>
 </html>
